--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,35 @@
     android:layout_height="match_parent"
     tools:context="com.bestaudiorecorders.android_media_recorder.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/recordButton"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="onClick_record"
+        android:text="Record"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="164dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <Button
+        android:id="@+id/stopButton"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:onClick="onClick_stop"
+        android:text="Stop"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/recordButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
